feature : add Docker stuff (prod + local)

--- a/quiz-api/Dockerfile
+++ b/quiz-api/Dockerfile
@@ -23,10 +23,8 @@ ENV FLASK_APP=app.py
 COPY . .
 
 # Informations sur l'image
-# LABEL maintainer="Nom Prénom <nom.prénom@esiee.fr>" \
+# LABEL maintainer="Nagusleswaran Vithulaksan   <nagusleswaran.vithulaksan@edu.esiee.fr>" \
 #     version="1.0"
 
 # Commande de démarrage du serveur gunicorn
-# CMD ["gunicorn", "--bind", "0.0.0.0:5000", "app:app", "--log-level", "info", "--error-logfile", "-", "--access-logfile", "-"]
-
-CMD  ["flask", "run", "--host", "0.0.0.0", "--port", "5000"] 
+CMD ["gunicorn", "--bind", "0.0.0.0:5000", "app:app", "--log-level", "info", "--error-logfile", "-", "--access-logfile", "-"]
